--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,7 @@ platform = atmelavr
 board = uno
 framework = arduino
 extra_scripts = extra_script.py
+lib_deps= 
+    gordoste/LedControl@1.0.6
+    GreyGnome/EnableInterrupt@^1.1.0
 
